Done some changes on local machine

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hii This is my first prooo.
+	    <h4>This is a new heading</h4>
+	    Secret msg to come
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
