--- a/article1.html
+++ b/article1.html
@@ -1,2 +1,22 @@
 <html>
+    <head>
+        <title>
+            Article-One Abhishek Gaikwad
+        </title>
+    </head>
+    
+    <body>
+        <h1>
+            ARTICLE ONE
+        </h1>
+        
+        <a href="/">
+            Home
+        </a>
+        <div>
+            <p>
+                This is my first IMAD nptel project feeling good
+            </p>
+        </div>
+    </body>
 </html>
