--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id = "main-content" class="center text-big bold">
             Hii This is my first prooo.
 	    <h4>This is a new heading</h4>
 	    Secret msg to come
