[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,15 +5,18 @@
     </head>
     <body>
         <div class="center">
-            <img id = "coder" src="/ui/madi.png" class="img-medium"/>
+            <img id = "coder" src="https://picsart.com/i/image-its-shivaji-maharaj-219930141009202" class="img-medium"/>
         </div>
-        <br>
-        <div id = "main-content" class="center text-big bold">
-            Hii This is my first prooo.
-	    <h4>This is a new heading</h4>
-	    Secret msg to come
+        <div>
+            <h3>Profile</h3>
+            <div>
+                Personal 
+                <p>Hii.. I am Abhishek Gaikwad</p>
+            </div>
+            <div>
+                Professional 
+                <p>I work at Home</p>
+            </div>
         </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
     </body>
 </html>
