[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,19 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id = "coder" src="https://picsart.com/i/image-its-shivaji-maharaj-219930141009202" class="img-medium"/>
-        </div>
         <div>
-            <h3>Profile</h3>
-            <div>
-                Personal 
-                <p>Hii.. I am Abhishek Gaikwad</p>
+            <div class="center">
+                <img id = "coder" src="https://cdn168.picsart.com/219930141009202.jpg?r1024x1024" class="img-medium"/>
             </div>
             <div>
-                Professional 
-                <p>I work at Home</p>
+                <h3>Personal</h3>
+                <div>
+                    Hii.. I am Abhishek Gaikwad
+                </div>
+                <h3>Personal</h3>
+                <div>
+                    I work at Home
+                </div>
             </div>
         </div>
     </body>
