[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,6 @@
             <div class="center">
                 <img id = "coder" src="https://cdn168.picsart.com/219930141009202.jpg?r1024x1024" class="img-medium"/>
             </div>
-            <div>
                 <h3>Personal</h3>
                 <div>
                     Hii.. I am Abhishek Gaikwad
@@ -18,8 +17,10 @@
                 <div>
                     I work at Home
                 </div>
-                <hr>
-            </div>
+                <hr/>
+                <div class="footer">
+                    This button <button id="counter">Click Me</button> has been clicked <span id= "count">0</span>times.
+                </div>
         </div>
     </body>
 </html>
