[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div>
             <div class="center">
-                <img id = "coder" src="https://cdn168.picsart.com/219930141009202.jpg?r1024x1024" class="img-medium"/>
+                <img id = "coder" src="https://media.giphy.com/media/eMDlXSrHeMR5S/giphy.gif" class="img-medium"/>
             </div>
                 <h3>Personal</h3>
                 <div>
