[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,19 +8,7 @@
             <div class="center">
                 <img id = "coder" src="https://media.giphy.com/media/eMDlXSrHeMR5S/giphy.gif" class="img-medium"/>
             </div>
-                <h3>Personal</h3>
-                <div>
-                    Hii.. I am Abhishek Gaikwad
-                </div>
-                <hr/>
-                <h3>Personal</h3>
-                <div>
-                    I work at Home
-                </div>
-                <hr/>
-                <div class="footer">
-                    This button <button id="counter">Click Me</button> has been clicked <span id= "count">0 </span> times.
-                </div>
+                <h1>APRIL FOOL</h1>
         </div>
         <script type = "text/javascript" src ="/ui/main.js"></script>
     </body>
